Scope, Context and Update README.md

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "autoload": {
         "psr-4": {
-            "Acme\\": "namespace"
+            "Acme\\": "namespace",
+            "Bcme\\": "scope-and-context"
         }
     }
 }
